--- a/tvMarketMonitoring.ipynb
+++ b/tvMarketMonitoring.ipynb
@@ -72,7 +72,28 @@
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2018-02-14T10:10:26.964+0100 I CONTROL  [initandlisten] MongoDB starting : pid=9595 port=27017 dbpath=/data/db 64-bit host=zebra.fub.it\r\n",
+      "2018-02-14T10:10:26.964+0100 I CONTROL  [initandlisten] db version v3.4.2\r\n",
+      "2018-02-14T10:10:26.964+0100 I CONTROL  [initandlisten] git version: 3f76e40c105fc223b3e5aac3e20dcd026b83b38b\r\n",
+      "2018-02-14T10:10:26.964+0100 I CONTROL  [initandlisten] allocator: system\r\n",
+      "2018-02-14T10:10:26.964+0100 I CONTROL  [initandlisten] modules: none\r\n",
+      "2018-02-14T10:10:26.964+0100 I CONTROL  [initandlisten] build environment:\r\n",
+      "2018-02-14T10:10:26.964+0100 I CONTROL  [initandlisten]     distarch: x86_64\r\n",
+      "2018-02-14T10:10:26.964+0100 I CONTROL  [initandlisten]     target_arch: x86_64\r\n",
+      "2018-02-14T10:10:26.964+0100 I CONTROL  [initandlisten] options: {}\r\n",
+      "2018-02-14T10:10:26.964+0100 I STORAGE  [initandlisten] exception in initAndListen: 98 Unable to lock file: /data/db/mongod.lock Resource temporarily unavailable. Is a mongod instance already running?, terminating\r\n",
+      "2018-02-14T10:10:26.964+0100 I NETWORK  [initandlisten] shutdown: going to close listening sockets...\r\n",
+      "2018-02-14T10:10:26.964+0100 I NETWORK  [initandlisten] shutdown: going to flush diaglog...\r\n",
+      "2018-02-14T10:10:26.964+0100 I CONTROL  [initandlisten] now exiting\r\n",
+      "2018-02-14T10:10:26.964+0100 I CONTROL  [initandlisten] shutting down with code:100\r\n"
+     ]
+    }
+   ],
    "source": [
     "import sys\n",
     "sys.path.append(\"./lib/python2.7/site-packages/\")\n",
@@ -83,7 +104,7 @@
     "import subprocess\n",
     "import time\n",
     "import datetime\n",
-    "\n",
+    "!mongod\n",
     "# activate mongodb\n",
     "import pymongo\n",
     "from pymongo import MongoClient\n",
@@ -152,9 +173,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "DVB-T2 37\n",
-      "DVB-T 317\n",
-      "HEVC 103\n",
+      "DVB-T2 41\n",
+      "DVB-T 346\n",
+      "HEVC 124\n",
       "DVB-T2 HEVC 0\n"
      ]
     }
@@ -196,10 +217,10 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "DVB-T 84\n",
-      "DVB-T2 79\n",
-      "HEVC 30\n",
-      "DVB-T2 HEVC 18\n"
+      "DVB-T 88\n",
+      "DVB-T2 81\n",
+      "HEVC 36\n",
+      "DVB-T2 HEVC 20\n"
      ]
     }
    ],
@@ -240,10 +261,10 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "DVB-T2 182\n",
-      "DVB-T 1\n",
-      "DVB-T2 HEVC 177\n",
-      "HEVC 178\n"
+      "DVB-T2 230\n",
+      "DVB-T 10\n",
+      "DVB-T2 HEVC 217\n",
+      "HEVC 222\n"
      ]
     }
    ],
@@ -252,19 +273,19 @@
     "shop=\"EURONICS\"\n",
     "\n",
     "keyword=\"DVB-T2\"\n",
-    "url=\"https://www.euronics.it/acquistaonline/tv-led/cat110016/?q=\"+keyword\n",
+    "url=\"https://www.euronics.it/acquistaonline/?q=\"+keyword\n",
     "get_value(url,selector,keyword,shop)\n",
     "\n",
     "keyword=\"DVB-T\"    \n",
-    "url=\"https://www.euronics.it/acquistaonline/tv-led/cat110016/?q=\"+keyword\n",
+    "url=\"https://www.euronics.it/acquistaonline/?q=\"+keyword\n",
     "get_value(url,selector,keyword,shop)\n",
     "\n",
     "keyword=\"DVB-T2 HEVC\"\n",
-    "url=\"https://www.euronics.it/acquistaonline/tv-led/cat110016/?q=\"+keyword\n",
+    "url=\"https://www.euronics.it/acquistaonline/?q=\"+keyword\n",
     "get_value(url,selector,keyword,shop)\n",
     "\n",
     "keyword=\"HEVC\"\n",
-    "url=\"https://www.euronics.it/acquistaonline/tv-led/cat110016/?q=\"+keyword\n",
+    "url=\"https://www.euronics.it/acquistaonline/?q=\"+keyword\n",
     "get_value(url,selector,keyword,shop)"
    ]
   },
@@ -277,17 +298,42 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "{'date': '05/01/18', 'url': 'https://it.aliexpress.com/wholesale?spm=a2g0y.search0104.1.1.kasRbE&SearchText=dvb-t2', 'shop': 'Aliexpress', 'keyword': 'DVB-T2', 'risultato': u'2,091'}\n",
-      "{'shop': 'Aliexpress', 'date': '05/01/18', 'keyword': 'DVB-T', 'url': 'https://it.aliexpress.com/wholesale?catId=0&SearchText=dvb-t', 'risultato': u'3,550'}\n",
-      "{'shop': 'Aliexpress', 'date': '05/01/18', 'keyword': 'DVB-T2 HEVC', 'url': 'https://it.aliexpress.com/wholesale?catId=0&initiative_id=SB_20171129054255&SearchText=dvb-t2++hevc', 'risultato': u'48'}\n",
-      "{'shop': 'Aliexpress', 'date': '05/01/18', 'keyword': 'HEVC', 'url': 'https://it.aliexpress.com/wholesale?catId=0&SearchText=hevc', 'risultato': u'342'}\n"
+     "data": {
+      "text/plain": [
+       "u'2,082'"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "url=\"https://it.aliexpress.com/wholesale?spm=a2g0y.search0104.1.1.kasRbE&SearchText=dvb-t2\"\n",
+    "r  = requests.get(url)\n",
+    "data = r.text\n",
+    "soup = BeautifulSoup(data, 'lxml')\n",
+    "soup.select('#we-wholesale-search-list > div.bread-block-wrap > div > div > div.search-result > p > strong')[0].text\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "IndexError",
+     "evalue": "list index out of range",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mIndexError\u001b[0m                                Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-10-e8c217466667>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      5\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      6\u001b[0m \u001b[0;31m#numero_prodotti=(soup.select('#we-wholesale-search-list > div.bread-block-wrap > div > div > div.search-result > p > strong')[0].text)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 7\u001b[0;31m \u001b[0mnumero_prodotti\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0msoup\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mselect\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'#we-wholesale-search-list > div.bread-block-wrap > div > div > div.search-result > p > strong'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mtext\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      8\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      9\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mIndexError\u001b[0m: list index out of range"
      ]
     }
    ],
@@ -297,7 +343,11 @@
     "data = r.text\n",
     "soup = BeautifulSoup(data, 'lxml')\n",
     "\n",
+    "#numero_prodotti=(soup.select('#we-wholesale-search-list > div.bread-block-wrap > div > div > div.search-result > p > strong')[0].text)\n",
     "numero_prodotti=(soup.select('#we-wholesale-search-list > div.bread-block-wrap > div > div > div.search-result > p > strong')[0].text)\n",
+    "\n",
+    "\n",
+    "\n",
     "posts = db.posts\n",
     "\n",
     "post_data = {\n",
@@ -384,10 +434,10 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "DVB-T2 166\n",
-      "HEVC 84\n",
-      "DVB-T 304\n",
-      "DVB-T2 HEVC 52\n"
+      "DVB-T2 165\n",
+      "HEVC 68\n",
+      "DVB-T 302\n",
+      "DVB-T2 HEVC 43\n"
      ]
     }
    ],
@@ -428,9 +478,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "HEVC 44\n",
-      "DVB-T 123\n",
-      "DVB-T2 776\n"
+      "HEVC 115\n",
+      "DVB-T 149\n",
+      "DVB-T2 827\n"
      ]
     }
    ],
@@ -458,24 +508,26 @@
    "metadata": {},
    "outputs": [
     {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/usr/local/lib/python2.7/site-packages/ipykernel_launcher.py:2: DeprecationWarning: remove is deprecated. Use delete_one or delete_many instead.\n",
-      "  \n"
+     "ename": "NameError",
+     "evalue": "name 'posts' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-9-cad4c4bb7d36>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mlist\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mposts\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mremove\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m{\u001b[0m \u001b[0;34m\"shop\"\u001b[0m\u001b[0;34m:\u001b[0m \u001b[0;34m\"EURONICS\"\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m'date'\u001b[0m\u001b[0;34m:\u001b[0m \u001b[0;34m'10/01/18'\u001b[0m \u001b[0;34m}\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m: name 'posts' is not defined"
      ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "[u'ok', u'n']"
-      ]
-     },
-     "execution_count": 9,
-     "metadata": {},
-     "output_type": "execute_result"
     }
    ],
+   "source": [
+    "list(posts.remove({ \"shop\": \"EURONICS\",'date': '10/01/18' }))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": [
     "#list(posts.remove({ \"shop\": \"Aliexpress\" }))\n",
     "list(posts.remove({ \"keyword\": \"Tutti televisori\" }))"
@@ -483,18 +535,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "2018-01-05T09:11:41.151+0100\twriting MonitoraggioTV.posts to \r\n",
-      "2018-01-05T09:11:41.154+0100\tdone dumping MonitoraggioTV.posts (400 documents)\r\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "!mongodump --db MonitoraggioTV --out=dbDump/\n",
     "import pandas as pd\n",
@@ -569,14 +612,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "data[(data[\"shop\"]==\"SUBITO.IT\") & (data[\"keyword\"]==\"DVB-T\")][[\"shop\",\"keyword\",\"risultato\"]]"
+    "#data[(data[\"shop\"]==\"EURONICS\") & (data[\"date\"]==\"10/01/18\")]"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
     "post_data = {\n",
     "    'shop': \"EURONICS\",\n",
